--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     
 
 
-    <script src="./dist/bundle.js"></script>
+    <script src="./dist/bundle.js" type="module"></script>
 </body>
 </html>
